--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
 # command to run tests
 script:
   - flake8 . --max-line-length=120
-  - pydocstyle . --add-ignore=D202
+  - pydocstyle . --add-ignore=D202,D203
